[package]
name = "virtual_joystick"
version = "1.1.0"
edition = "2021"
categories = ["game-engines", "input", "gui"]
description = "Bevy virtual Joystick for mobile games"
exclude = ["default_assets/", ".github/", "examples/"]
homepage = "https://github.com/SergioRibera/virtual_joystick"
keywords = ["game", "ui", "gamedev", "bevy", "input"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/SergioRibera/virtual_joystick"
rust-version = "1.67.0"

[features]
default = ["serialize"]
serialize = ["serde"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
serde = { version = "1.0.160", features = ["derive"], optional = true }
